Update Kernelized Support Vector Machines.ipynb

--- a/Kernelized Support Vector Machines.ipynb
+++ b/Kernelized Support Vector Machines.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Kernelized Support Vector machines (SVM's) are an extension that allows more complex models that are not simply defined by hyperplanes in the input space.** We can make a linear model more flexible by adding more features. (By adding polynomials of thhe input features)"
+    "**Kernelized Support Vector machines (SVM's) are an extension that allows more complex models that are not simply defined by hyperplanes in the input space.** We can make a linear model more flexible by adding more features. (By adding polynomials of the input features)"
    ]
   },
   {
